--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.9.1",
+    "hooper": "^0.3.4",
     "nuxt": "^2.15.3"
   },
   "devDependencies": {
     "fibers": "^5.0.0",
+    "nuxt-gsap-module": "^1.3.2",
     "sass": "^1.34.0",
     "sass-loader": "10"
   }
