--- a/package.json
+++ b/package.json
@@ -1,23 +1,30 @@
 {
-  "name": "veganify",
+  "name": "veganify_2",
   "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate"
+    "generate": "nuxt generate",
+    "lint:prettier": "prettier --check .",
+    "lint": "yarn lint:prettier",
+    "lintfix": "prettier --write --list-different ."
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
-    "core-js": "^3.9.1",
+    "core-js": "^3.21.1",
     "hooper": "^0.3.4",
-    "nuxt": "^2.15.3"
+    "nuxt": "^2.15.8",
+    "sass-loader": "^10.1.1",
+    "vue": "^2.6.14",
+    "vue-server-renderer": "^2.6.14",
+    "vue-template-compiler": "^2.6.14",
+    "webpack": "^4.46.0"
   },
   "devDependencies": {
-    "fibers": "^5.0.0",
-    "nuxt-gsap-module": "^1.3.2",
-    "sass": "^1.34.0",
-    "sass-loader": "10"
+    "eslint-config-prettier": "^8.3.0",
+    "prettier": "^2.5.1",
+    "sass": "^1.49.9"
   }
 }
