--- a/package.json
+++ b/package.json
@@ -15,17 +15,18 @@
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/robots": "^2.5.0",
     "@nuxtjs/sitemap": "^2.4.0",
+    "cookie-universal-nuxt": "^2.1.5",
     "core-js": "^3.21.1",
     "hooper": "^0.3.4",
     "nuxt": "^2.15.8",
     "sass-loader": "^10.1.1",
+    "set-cookie-parser": "^2.4.8",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^4.46.0"
   },
   "devDependencies": {
-    "@nuxtjs/google-fonts": "^1.3.0",
     "eslint-config-prettier": "^8.3.0",
     "prettier": "^2.5.1",
     "sass": "^1.49.9"
