--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "webpack": "^4.46.0"
   },
   "devDependencies": {
+    "@nuxtjs/google-fonts": "^1.3.0",
     "eslint-config-prettier": "^8.3.0",
     "prettier": "^2.5.1",
     "sass": "^1.49.9"
